# playwright_sample

./: README.md  docker-compose.yaml  pyproject.toml
playwright_sample/: sample.py
