[tool.poetry]
name = "playwright-sample"
version = "0.1.0"
description = ""
authors = ["qwerty0121 <dummy@example.com>"]
readme = "README.md"
packages = [{include = "playwright_sample"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
playwright = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
